[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "festo-edcon"
description = "Library to issue profidrive tasks for Festo specific electrical drives"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Elias Rosch", email = "elias.rosch@festo.com" },
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "pymodbus==3.11.3",
    "ethernetip==1.1.2",
    "rich==14.2.0",
]

[project.optional-dependencies]
gui = [
    "pyqt5"
]

[dependency-groups]
dev = [
    "black",
    "myst-parser",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "setuptools",
    "sphinx",
    "sphinx-rtd-theme"
]

[project.scripts]
festo-edcon = "edcon.cli.cli:main"
festo-edcon-gui = "edcon.cli.gui:main" 

[project.urls]
Documentation = "https://festo-se.github.io/festo-edcon/"
Repository = "https://github.com/Festo-se/festo-edcon"
Changelog = "https://github.com/Festo-se/festo-edcon/blob/main/CHANGELOG.md"


[tool.setuptools.package-data]
pnu_map = ["edcon/edrive/data/pnu_map.csv"]
icp_map = ["edcon/edrive/data/icp_map.csv"]
ui_files = ["edcon/gui/ui/*.ui"]
css_files = ["edcon/gui/ui/*.css"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools_scm]